# OpenGLPractice8

./: CMakeLists.txt  README.md
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
src/Shaders/: shader.frag  shader.vert
